--- a/web-page.html
+++ b/web-page.html
@@ -36,7 +36,7 @@
             <div id="top-bar show-for-medium" class="top-bar">
                 <ul class="menu">
                     <li>
-                        <a class="title" href="file:///C:/xampp/htdocs/web_page/web-page.html" title="音樂小屋">
+                        <a class="title" href="https://zx45756214.github.io/web-page.html" title="音樂小屋">
                             音樂小屋
                         </a>
                     </li>
