--- a/web-page.html
+++ b/web-page.html
@@ -61,14 +61,12 @@
             <div id="top-bar-right" class="top-bar">
                 <ul class="menu">
                     <li class="menu-register">
-                        <a href="http://localhost/project/(Nick)login_sample/login-register%20html%202023-10-12/register.html"
-                            title="註冊">
+                        <a href="http://zx45756214.github.io/login-register html 2023-10-12/register.html" title="註冊">
                             註冊
                         </a>
                     </li>
                     <li class="menu-register">
-                        <a href="http://localhost/project/(Nick)login_sample/login-register%20html%202023-10-12/login.html?"
-                            title="登入">
+                        <a href="http://zx45756214.github.io/login-register html 2023-10-12/login.html" title="登入">
                             登入
                         </a>
                     </li>
